add missing links

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 Designs
             </div>
             <ul>
-                <li><a href="#" target="_blank">
+                <li><a href="http://stackoverflow.com/users/4466618/aarjithn" target="_blank">
                     <span data-hover="BEHENCE">BEHENCE</span>
                 </a></li>
             </ul>
@@ -56,14 +56,17 @@
                 </a></li>
             </ul>
             <div class="titles">
-                Answers
+                Writings
             </div>
             <ul>
-                <li><a href="#" target="_blank">
+                <li><a href="http://stackoverflow.com/users/4466618/aarjithn" target="_blank">
                     <span data-hover="STACKOVERFLOW">STACKOVERFLOW</span>
                 </a></li>
-                <li><a href="#" target="_blank">
+                <li><a href="http://quora.com/profile/aarjith-nandakumar" target="_blank">
                     <span data-hover="QUORA">QUORA</span>
+                </a></li>
+                <li><a href="https://medium.com/@aarjithn" target="_blank">
+                    <span data-hover="MEDIUM">MEDIUM</span>
                 </a></li>
             </ul>
             <div class="titles">
@@ -78,13 +81,13 @@
                 </a></li>
             </ul>
             <div class="titles">
-                Recordings
+                Media
             </div>
             <ul>
                 <li><a href="https://soundcloud.com/aarjithn" target="_blank">
                     <span data-hover="SOUNDCLOUD">SOUNDCLOUD</span>
                 </a></li>
-                <li><a href="#" target="_blank">
+                 <li><a href="https://www.youtube.com/user/Aarjith/videos?view=0&sort=dd&shelf_id=0" target="_blank">
                     <span data-hover="YOUTUBE">YOUTUBE</span>
                 </a></li>
             </ul>
