Add works section

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <h2 class="hello">Hello World!</h2>
             <img class="thumbnail" src="http://www.gravatar.com/avatar/0aea7ebffd7c22f1aa6a043a2649698d?size=150" alt="Aarjith's Avatar">
             <h2 class="me">I'm <b>Aarjith Nandakumar</b>,
-            <h6 class="title">Frontend Engineer and UI designer</h6>
+            <h3 class="title">Frontend Engineer and UI designer</h3>
         </section>
         <section class="container">
             <div class="row note">
@@ -26,8 +26,47 @@
                 <p>Meanwhile checkout my works in below links.</p>
             </div>
         </section>
+        <section class="container">
+            <h4 class="works-title">
+                <span>Works</span>
+            </h4>
+            <ul class="works-list">
+                <li>
+                    <h5><a target="_blank" href="https://aarjithn.github.io/frontend-logos">Frontend logos quiz</a></h5>
+                    <div>A quiz to test your knowledge on latest front end tools.</div>
+                    <div>Roles: Design, Development</div>
+                    <div>Tags: <small>React</small>, <small>NodeJS</small>, <small>Sketch</small>, <small>CSS3</small></div>
+                </li>
+                <li>
+                    <h5><a target="_blank" href="https://aarjithn.github.io/periodic-table">Periodic Table</a></h5>
+                    <div>Simple periodic table with design inspired from Isotope.</div>
+                    <div>Roles: Development</div>
+                    <div>Tags: <small>CSS3</small>, <small>VelocityJS</small>, <small>jQuery</small></div>
+                </li>
+                <li>
+                    <h5><a target="_blank" href="https://jenkins-contrib-themes.github.io/jenkins-neo-theme">Jenkins Neo Theme</a></h5>
+                    <div>A modern and clean theme for jenkins.</div>
+                    <div>Roles: Development</div>
+                    <div>Tags: <small>CSS3</small></div>
+                </li>
+                <li>
+                    <h5><a target="_blank" href="https://www.behance.net/aarjithn">IRCTC Redesign</a></h5>
+                    <div>An attempt to modernise IRCTC with clean and simple design.</div>
+                    <div>Roles: Design</div>
+                    <div>Tags: <small>Sketch</small></div>
+                </li>
+                <li>
+                    <h5><a target="_blank" href="http://aarjithn.github.io/t9-keypad">T9 keypad</a></h5>
+                    <div>A working model of T9 keypad phone in CSS3 / JS.</div>
+                    <div>Roles: Design, Development</div>
+                    <div>Tags: <small>CSS3</small>, <small>jQuery</small></div>
+                </li>
+            </ul>
+        </section>
         <section class="container links">
-
+            <h4 class="works-title">
+                <span>Social Links</span>
+            </h4>
             <div class="titles">
                 Code
             </div>
@@ -43,8 +82,8 @@
                 Designs
             </div>
             <ul>
-                <li><a href="#" target="_blank">
-                    <span data-hover="BEHENCE">BEHENCE</span>
+                <li><a href="https://www.behance.net/aarjithn" target="_blank">
+                    <span data-hover="BEHANCE">BEHANCE</span>
                 </a></li>
             </ul>
             <div class="titles">
@@ -59,10 +98,10 @@
                 Answers
             </div>
             <ul>
-                <li><a href="#" target="_blank">
+                <li><a href="http://stackoverflow.com/users/4466618/aarjithn" target="_blank">
                     <span data-hover="STACKOVERFLOW">STACKOVERFLOW</span>
                 </a></li>
-                <li><a href="#" target="_blank">
+                <li><a href="https://www.quora.com/profile/aarjith-nandakumar" target="_blank">
                     <span data-hover="QUORA">QUORA</span>
                 </a></li>
             </ul>
@@ -75,17 +114,6 @@
                 </a></li>
                 <li><a href="https://instagram.com/aarjithn" target="_blank">
                     <span data-hover="INSTAGRAM">INSTAGRAM</span>
-                </a></li>
-            </ul>
-            <div class="titles">
-                Recordings
-            </div>
-            <ul>
-                <li><a href="https://soundcloud.com/aarjithn" target="_blank">
-                    <span data-hover="SOUNDCLOUD">SOUNDCLOUD</span>
-                </a></li>
-                <li><a href="#" target="_blank">
-                    <span data-hover="YOUTUBE">YOUTUBE</span>
                 </a></li>
             </ul>
             <div class="titles">
