Update links with new domain

--- a/index.html
+++ b/index.html
@@ -32,13 +32,13 @@
             </h4>
             <ul class="works-list">
                 <li>
-                    <h5><a target="_blank" href="https://aarjithn.github.io/frontend-logos">Frontend logos quiz</a></h5>
+                    <h5><a target="_blank" href="http://arji.me/frontend-logos">Frontend logos quiz</a></h5>
                     <div>A quiz to test your knowledge on latest front end tools.</div>
                     <div>Roles: Design, Development</div>
                     <div>Tags: <small>React</small>, <small>NodeJS</small>, <small>Sketch</small>, <small>CSS3</small></div>
                 </li>
                 <li>
-                    <h5><a target="_blank" href="https://aarjithn.github.io/periodic-table">Periodic Table</a></h5>
+                    <h5><a target="_blank" href="http://arji.me/periodic-table">Periodic Table</a></h5>
                     <div>Simple periodic table with design inspired from Isotope.</div>
                     <div>Roles: Development</div>
                     <div>Tags: <small>CSS3</small>, <small>VelocityJS</small>, <small>jQuery</small></div>
@@ -56,7 +56,7 @@
                     <div>Tags: <small>Sketch</small></div>
                 </li>
                 <li>
-                    <h5><a target="_blank" href="http://aarjithn.github.io/t9-keypad">T9 keypad</a></h5>
+                    <h5><a target="_blank" href="http://arji.me/t9-keypad">T9 keypad</a></h5>
                     <div>A working model of T9 keypad phone in CSS3 / JS.</div>
                     <div>Roles: Design, Development</div>
                     <div>Tags: <small>CSS3</small>, <small>jQuery</small></div>
@@ -90,7 +90,7 @@
                 Resume
             </div>
             <ul>
-                <li><a href="/resume" target="_blank">
+                <li><a href="resume" target="_blank">
                     <span data-hover="RESUME">RESUME</span>
                 </a></li>
             </ul>
